--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start-3002": "set PORT=3002 && nodemon server.js",
+    "start-3003": "set PORT=3003 && nodemon server.js",
+    "start-3004": "set PORT=3004 && nodemon server.js",
+    "start-all": "concurrently \"npm run start-3002\" \"npm run start-3003\" \"npm run start-3004\""
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
+    "concurrently": "^9.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
