--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,52 @@
-worker_processes  1;
+# worker_processes  1;
+worker_processes auto;
+
+# Increase file descriptor limits
+worker_rlimit_nofile 65535;
 
 events {
-    worker_connections  1024;
+    # worker_connections  1024;
+      worker_connections 4096;    # Increased from 1024
+      multi_accept on;
+      use epoll;    
 }
 
 http {
     include       mime.types;
     default_type  application/json;
 
+    # Add performance optimizations
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    keepalive_requests 100;
+    
+    # Buffer size optimizations
+    client_body_buffer_size 10K;
+    client_header_buffer_size 1k;
+    client_max_body_size 8m;
+    large_client_header_buffers 2 1k;
+
     upstream user_management_backend {
         server 127.0.0.1:3002;
         server 127.0.0.1:3003;
         server 127.0.0.1:3004;
         ip_hash;
+        keepalive 32;  # Keep connections alive
+        keepalive_requests 100;
+        keepalive_timeout 60s;
     }
 
     server {
-        listen       80;
+        listen       80 backlog=4096;
         server_name  localhost;
+
+         # Compression
+        gzip on;
+        gzip_min_length 10;
+        gzip_comp_level 6;
+        gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
         location / {
             # CORS headers inside location block
@@ -28,10 +57,22 @@ http {
 
             proxy_pass http://user_management_backend/;
             proxy_http_version 1.1;
+            proxy_set_header Connection "";  # Required for keepalive
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Timeouts
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+
+            # Buffering
+            proxy_buffering on;
+            proxy_buffer_size 4k;
+            proxy_buffers 8 16k;
+            proxy_busy_buffers_size 32k;
 
             # Handle OPTIONS method
             if ($request_method = 'OPTIONS') {
@@ -43,18 +84,36 @@ http {
         }
 
         location /api/ {
+
+            # Same optimizations as above
+            proxy_pass http://user_management_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+
+            # Timeouts
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+
+
+
             # CORS headers for API routes
             add_header 'Access-Control-Allow-Origin' 'http://localhost:5173' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' '*' always;
 
-            proxy_pass http://user_management_backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            # proxy_pass http://user_management_backend;
+            # proxy_http_version 1.1;
+            # proxy_set_header Host $host;
+            # proxy_set_header X-Real-IP $remote_addr;
+            # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            # proxy_set_header X-Forwarded-Proto $scheme;
 
             # Handle OPTIONS method
             if ($request_method = 'OPTIONS') {
